Added background tasks

--- a/background-tasks/briefings.mdx
+++ b/background-tasks/briefings.mdx
@@ -1,8 +1,10 @@
 ---
-title: 'Briefings'
+title: 'Email Briefings'
 description: 'Martin can send you daily or weekly briefings via email.'
 icon: 'newspaper'
 ---
+
+## How it works
 
 <iframe
   width="100%"
@@ -13,6 +15,16 @@ icon: 'newspaper'
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen="true"
   ></iframe>
+1. Go to the briefings card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Select a frequency and list of topics for your briefings.
+4. Get ready to receive your daily or weekly briefings via email.
+
+## iOS app
+
+1. Tap the account icon in the [Martin app](https://www.trymartin.com/#section-1).
+2. Under "Tools", select "Briefings".
+3. Select a frequency and list of topics for your briefings.
 
 ## Example Briefing Topics
 
@@ -21,16 +33,3 @@ icon: 'newspaper'
 - Important emails from my team
 - My to-do list
 - Weather updates
-
-
-## Setup (web)
-
-1. Go to the briefings card in your [Martin dashboard](https://app.trymartin.com).
-2. Click the settings button in the top right.
-3. Select a frequency and list of topics for your briefings.
-
-## Setup (iOS app)
-
-1. Tap the account icon in the [Martin app](https://www.trymartin.com/#section-1).
-2. Under "Tools", select "Briefings".
-3. Select a frequency and list of topics for your briefings.
