--- a/capabilities/reminders.mdx
+++ b/capabilities/reminders.mdx
@@ -4,6 +4,8 @@ description: 'Tell Martin to remind you to do something, and he will ping you wh
 icon: 'bell'
 ---
 
+## How it works
+
 <iframe
   width="100%"
   height="400"
@@ -13,6 +15,17 @@ icon: 'bell'
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen="true"
   ></iframe>
+
+1. Go to the reminders card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Select which interfaces you want to use for reminders (App Notifications, SMS, Phone Call, Email, or Slack).
+4. Tell Martin to remind you to do something, and he will ping you at the specified time, via the specified interface.
+
+## iOS app
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Tools", select "Reminders".
+3. Select which interfaces you want to use for reminders (App Notifications, SMS, Phone Call, Email, or Slack).
 
 ## Example Commands
 <Tabs>
@@ -37,16 +50,3 @@ icon: 'bell'
     - "Ping me on Slack periodically to finish the report by Friday."
   </Tab>
 </Tabs>
-
-
-## Setup (web)
-
-1. Go to the reminders card in your [Martin dashboard](https://app.trymartin.com).
-2. Click the settings button in the top right.
-3. Select which interfaces you want to use for reminders (App Notifications, SMS, Phone Call, Email, or Slack).
-
-## Setup (iOS app)
-
-1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
-2. Under "Tools", select "Reminders".
-3. Select which interfaces you want to use for reminders (App Notifications, SMS, Phone Call, Email, or Slack).
