--- a/capabilities/todos.mdx
+++ b/capabilities/todos.mdx
@@ -4,9 +4,15 @@ description: 'Have Martin manage your to-do list.'
 icon: 'list-check'
 ---
 
-## Background Tasks
+## How it works
 
-In your To-dos Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to text you a list of your to-dos every morning. This feature is currently only available to Pro users.
+1. Optionally, you can import your to-dos from Todoist in the [Martin web app](https://app.trymartin.com) -> Settings -> To-dos.
+2. In your [Martin dashboard](https://app.trymartin.com), you can create, view, and manage your to-dos in the "To-dos" card.
+3. You can tell Martin to add, edit, and check off your to-dos on your behalf from any interface.
+
+## iOS app
+
+- In the [iOS app](https://trymartin.com/#section-1), tap the account icon and under "Tools", tap "To-dos" to manage your to-dos.
 
 ## Example Commands
 
@@ -16,11 +22,6 @@ In your To-dos Settings in the [Martin web app](https://app.trymartin.com), you 
 - "Add 'Finish email campaign' to my marketing to-do list."
 - "Add 'Eric' and 'Andrew' to my customer list."
 
-## Setup (web)
+## Background Tasks
 
-- In your [Martin dashboard](https://app.trymartin.com), you can create, view, and manage your to-dos in the "To-dos" card.
-- You can also import your to-dos from Todoist in the [Martin web app](https://app.trymartin.com) -> Settings -> To-dos.
-
-## Setup (iOS app)
-
-- In the [iOS app](https://trymartin.com/#section-1), tap the account icon and under "Tools", tap "To-dos" to manage your to-dos.
+In your To-dos Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to text you a list of your to-dos every morning. This feature is currently only available to Pro users.
