--- a/integrations/calendar.mdx
+++ b/integrations/calendar.mdx
@@ -4,6 +4,8 @@ description: 'Have Martin read, create, and update events in your calendar.'
 icon: 'calendar'
 ---
 
+## How it works
+
 <iframe
   width="100%"
   height="400"
@@ -13,6 +15,21 @@ icon: 'calendar'
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen="true"
   ></iframe>
+
+1. Go to the calendar card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Click "Connect Google Calendar", "Connect Apple Calendar", or "Connect Outlook Calendar".
+4. If signing in with Google or Outlook, you will be redirected to the respective service to sign in.
+5. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
+6. Once connected, you can tell Martin to add an event to your calendar, and he will add it at the specified time with the specified details.
+
+## iOS app
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Integrations", select "Calendar".
+3. Click "Add Google Calendar", "Add Apple Calendar", or "Add Outlook Calendar".
+4. If signing in with Google or Outlook, you will be redirected to the respective service to sign in.
+5. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
 
 ## Integrations
 
@@ -30,9 +47,6 @@ Martin syncs with your existing calendar accounts.
   Connect up to 5 Outlook Calendars with your Martin account.
 </Card>
 
-## Background Tasks
-
-In your calendar Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to call you every morning and brief you on your schedule for the day. This feature is currently only available to Pro users.
 
 ## Example Commands
 - "Add every event from this email to my calendar with detailed descriptions."
@@ -41,19 +55,6 @@ In your calendar Settings in the [Martin web app](https://app.trymartin.com), yo
 - "Reschedule my meeting with Shawn tomorrow at 2pm to 3pm."
 - "Block off Friday from 3pm to 5pm because I'm on a plane."
 
+## Background Tasks
 
-## Setup (web)
-
-1. Go to the calendar card in your [Martin dashboard](https://app.trymartin.com).
-2. Click the settings button in the top right.
-3. Click "Connect Google Calendar", "Connect Apple Calendar", or "Connect Outlook Calendar".
-4. If signing in with Google or Outlook, you will be redirected to the respective service to sign in.
-5. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
-
-## Setup (iOS app)
-
-1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
-2. Under "Integrations", select "Calendar".
-3. Click "Add Google Calendar", "Add Apple Calendar", or "Add Outlook Calendar".
-4. If signing in with Google or Outlook, you will be redirected to the respective service to sign in.
-5. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
+In your calendar Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to call you every morning and brief you on your schedule for the day. This feature is currently only available to Pro users.
