--- a/integrations/contacts.mdx
+++ b/integrations/contacts.mdx
@@ -4,9 +4,11 @@ description: 'Martin can text and call contacts and carry out full conversations
 icon: 'phone'
 ---
 
-## Integrations
+## How it works
 
-Martin syncs with your phone contacts.
+1. Connect your phone number with Martin in the [Martin dashboard](https://app.trymartin.com), in Account (bottom left) -> Phone Numbers.
+2. Allow Martin to sync with your phone contacts via the iOS app.
+3. Once connected, you can tell Martin to text or call your contacts and carry out full conversations on your behalf.
 
 <Card title="Texting" icon="messages" horizontal="true">
   Martin can text your contacts and carry out full conversations on your behalf.
