--- a/integrations/inbox.mdx
+++ b/integrations/inbox.mdx
@@ -4,6 +4,8 @@ description: 'Have Martin read, draft, and reply to emails in your inbox.'
 icon: 'mailbox'
 ---
 
+## How it works
+
 <iframe
   width="100%"
   height="400"
@@ -13,6 +15,20 @@ icon: 'mailbox'
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen="true"
   ></iframe>
+
+1. Go to the inbox card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Click "Connect Gmail" or "Connect Outlook".
+4. You will be redirected to the respective service to sign in.
+5. Once connected, you can tell Martin to read, draft, and reply to emails on your behalf.
+
+## iOS app
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Integrations", select "Inbox".
+3. Click "Connect Gmail" or "Connect Outlook".
+4. You will be redirected to the respective service to sign in.
+
 
 ## Integrations
 
@@ -26,12 +42,6 @@ Martin syncs with your existing inboxes.
   Connect up to 5 Outlook accounts with your Martin account.
 </Card>
 
-
-## Background Tasks
-
-In your inbox Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to send you a daily digest of your emails. This feature is currently only available to Pro users.
-
-
 ## Example Commands
 - "Check for new emails from dawson@trymartin.com today."
 - "Draft a reply to Dawson's new email saying I can meet tomorrow at 9am."
@@ -39,17 +49,8 @@ In your inbox Settings in the [Martin web app](https://app.trymartin.com), you c
 - "Forward the project plan to ethan@trymartin.com and ask for his input."
 - "Email Eric the Zoom link for the meeting today on my calendar."
 
+## Background Tasks
 
-## Setup (web)
+In your inbox Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to send you a daily digest of your emails. This feature is currently only available to Pro users.
 
-1. Go to the inbox card in your [Martin dashboard](https://app.trymartin.com).
-2. Click the settings button in the top right.
-3. Click "Connect Gmail" or "Connect Outlook".
-4. You will be redirected to the respective service to sign in.
 
-## Setup (iOS app)
-
-1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
-2. Under "Integrations", select "Inbox".
-3. Click "Connect Gmail" or "Connect Outlook".
-4. You will be redirected to the respective service to sign in.
