--- a/integrations/slack.mdx
+++ b/integrations/slack.mdx
@@ -4,6 +4,8 @@ description: 'Have Martin read and send messages in Slack from your account.'
 icon: 'slack'
 ---
 
+## How it works
+
 <iframe
   width="100%"
   height="400"
@@ -14,6 +16,19 @@ icon: 'slack'
   allowfullscreen="true"
   ></iframe>
 
+1. Go to your [Martin dashboard](https://app.trymartin.com).
+2. Click the integration settings button at the top of the left side bar.
+3. Click "Slack".
+4. Click "Connect Workspace".
+5. You will be redirected to Slack to sign in.
+6. Once connected, you can tell Martin to read, send, and reply to Slack messages on your behalf.
+
+## iOS app
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Integrations", select "Slack".
+3. Tap "Add Slack Workspace" and sign in with your Slack account.
+
 ## Integrations
 
 Martin syncs with your Slack accounts and workspaces.
@@ -22,7 +37,6 @@ Martin syncs with your Slack accounts and workspaces.
   Connect up to 5 Slack workspaces with your Martin account.
 </Card>
 
-
 ## Example Commands
 - "Check for new messages in #general."
 - "Reply to #random with 'I'm on it.'"
@@ -30,17 +44,3 @@ Martin syncs with your Slack accounts and workspaces.
 - "React to @Ethan's message in #random with a thumbs up."
 - "Pin the message I just sent in #general."
 
-
-## Setup (web)
-
-1. Go to your [Martin dashboard](https://app.trymartin.com).
-2. Click the integration settings button at the top of the side bar.
-3. Click "Slack".
-4. Click "Connect Workspace".
-5. You will be redirected to Slack to sign in.
-
-## Setup (iOS app)
-
-1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
-2. Under "Integrations", select "Slack".
-3. Tap "Add Slack Workspace" and sign in with your Slack account.
