--- a/interfaces/email.mdx
+++ b/interfaces/email.mdx
@@ -17,7 +17,7 @@ icon: 'envelope'
 ## Setup (web)
 
 1. Go to your [Martin dashboard](https://app.trymartin.com).
-2. Click the account icon at the bottom of the side bar.
+2. Click the account icon at the bottom of the left side bar.
 3. Click "Add a primary email".
 4. Enter your email address in the email field.
 5. Verify your email address by entering the code you receive via email.
