--- a/interfaces/phone.mdx
+++ b/interfaces/phone.mdx
@@ -8,6 +8,21 @@ icon: 'phone'
     Have no Wifi but need to look something up or check your email? Give Martin a call!
 </Tip>
 
+## Setup (web)
+
+1. Go to your [Martin dashboard](https://app.trymartin.com).
+2. Click the account icon at the bottom of the left side bar.
+3. Click "Add a phone number".
+4. Enter your phone number.
+5. Verify your phone number by entering the code you receive via SMS.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Contact", tap "Phone Number".
+3. Enter your phone number.
+4. Verify your phone number by entering the code you receive via SMS.
+
 ## Languages
 
 Martin can speak the following 13 languages:
@@ -28,18 +43,3 @@ Martin can speak the following 13 languages:
 - Turkish
 
 To set Martin's language, go to the [Martin Dashboard](https://app.trymartin.com) > Settings > Call Martin > Language. At the moment, you can only set one language for Martin to use at a time.
-
-## Setup (web)
-
-1. Go to your [Martin dashboard](https://app.trymartin.com).
-2. Click the account icon at the bottom of the side bar.
-3. Click "Add a phone number".
-4. Enter your phone number.
-5. Verify your phone number by entering the code you receive via SMS.
-
-## Setup (iOS app)
-
-1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
-2. Under "Contact", tap "Phone Number".
-3. Enter your phone number.
-4. Verify your phone number by entering the code you receive via SMS.
