--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: How it works
+title: Introduction
 description: Meet your new personal assistant
 ---
 
@@ -76,10 +76,38 @@ Connect Martin to all your tools and services, so he can use them on your behalf
   </Card>
   <Card
     title="Texting & Calling"
-    icon="address-book"
-    href="https://docs.trymartin.com/capabilities/contacts"
+    icon="phone"
+    href="https://docs.trymartin.com/integrations/contacts"
   >
-    Martin can text and call your contacts and carry out full conversations.
+    Martin can text and call others on your behalf to book reservations, schedule events, etc.
+  </Card>
+  <Card
+    title="Reminders"
+    icon="bell"
+    href="https://docs.trymartin.com/capabilities/reminders"
+  >
+    Martin can send you reminders via text, Slack, email, phone call, or push notification.
+  </Card>
+  <Card
+    title="To-dos"
+    icon="list-check"
+    href="https://docs.trymartin.com/capabilities/reminders"
+  >
+    Martin can track and manage your to-do list items.
+  </Card>
+  <Card
+    title="Notes"
+    icon="notes"
+    href="https://docs.trymartin.com/capabilities/notes"
+  >
+    Martin can take notes for you during conversations and keep track of them.
+  </Card>
+  <Card
+    title="Information"
+    icon="magnifying-glass"
+    href="https://docs.trymartin.com/capabilities/search"
+  >
+    Martin can search Google, Perplexity, Twitter, and various news/weather sites.
   </Card>
   <Card
     title="Slack"
@@ -87,19 +115,5 @@ Connect Martin to all your tools and services, so he can use them on your behalf
     href="https://docs.trymartin.com/capabilities/slack"
   >
     Martin can read, send, and reply to messages on your behalf in Slack.
-  </Card>
-  <Card
-    title="Reminders & To-dos"
-    icon="bell"
-    href="https://docs.trymartin.com/capabilities/reminders"
-  >
-    Martin can track your to-dos and send you reminders via text or email.
-  </Card>
-  <Card
-    title="Information"
-    icon="magnifying-glass"
-    href="https://docs.trymartin.com/capabilities/search"
-  >
-    Martin searches Google, Perplexity, Twitter, and various news/weather sites to brief you.
   </Card>
 </CardGroup>
