--- a/capabilities/notes.mdx
+++ b/capabilities/notes.mdx
@@ -4,6 +4,14 @@ description: 'Have Martin save notes for you, including meeting notes, ideas, an
 icon: 'note'
 ---
 
+## How it works
+
+1. In your [Martin dashboard](https://app.trymartin.com), you can create, view, and manage your notes in the "Notes" app.
+2. You can tell Martin to read, add, and edit your notes from any interface.
+
+## iOS app
+
+- In the [iOS app](https://trymartin.com/#section-1), tap the account icon and under "Tools", tap "Notes" to manage your notes.
 
 ## Example Commands
 
@@ -11,11 +19,3 @@ icon: 'note'
 - [Text an image to Martin](https://trymartin.com/interfaces/sms) and say "Add all the dates from this flyer to my notes under 'Travel Dates'."
 - [Call Martin](https://trymartin.com/interfaces/phone) and say "Note down everything we talked about on this call and call it 'Brain Dump'."
 - [Call Martin](https://trymartin.com/interfaces/phone) and say "Save all the ideas we discussed on this call as a note and add it to my 'Project X' note."
-
-## Setup (web)
-
-1. In your [Martin dashboard](https://app.trymartin.com), you can create, view, and manage your notes in the "Notes" app.
-
-## Setup (iOS app)
-
-- In the [iOS app](https://trymartin.com/#section-1), tap the account icon and under "Tools", tap "Notes" to manage your notes.
