--- a/capabilities/shortcuts.mdx
+++ b/capabilities/shortcuts.mdx
@@ -4,20 +4,16 @@ description: 'Create custom shortcuts that trigger multi-step actions.'
 icon: 'wand-magic-sparkles'
 ---
 
-## Integrations
-
-Each shortcut has a name and instructions.
-
-## Example Shortcuts
-- Name: "Catch me up"
-- Instructions: "Check my calendar, upcoming reminders, unfinished to-dos, and unread emails. Send me a summary via text."
-- Name: "Add an idea"
-- Instructions: "Add the following idea to my ideas list, ping #random in Slack, and text it to myself."
-
-## Setup (web only)
+## How it works
 
 1. Go to the shortcuts card in your [dashboard](https://app.trymartin.com).
 2. Click "Shortcut +".
 3. Enter the name and instructions.
 4. Click "Create Shortcut".
 5. To run the shortcut, just click the play button next to each shortcut. This adds the shortcut command to the chat, where you can add additional instructions.
+
+## Example Shortcuts
+- Name: "Catch me up"
+- Instructions: "Check my calendar, upcoming reminders, unfinished to-dos, and unread emails. Send me a summary via text."
+- Name: "Add an idea"
+- Instructions: "Add the following idea to my ideas list, ping #random in Slack, and text it to myself."
