--- a/interfaces/slack.mdx
+++ b/interfaces/slack.mdx
@@ -17,7 +17,7 @@ icon: 'slack'
 ## Setup (web)
 
 1. Go to your [Martin dashboard](https://app.trymartin.com).
-2. Click the integration settings button at the top of the side bar.
+2. Click the integration settings button at the top of the left side bar.
 3. Click "Slack".
 4. Click "Connect Workspace".
 5. You will be redirected to Slack to sign in.
