--- a/interfaces/whatsapp.mdx
+++ b/interfaces/whatsapp.mdx
@@ -17,7 +17,7 @@ icon: 'whatsapp'
 ## Setup (web)
 
 1. Go to your [Martin dashboard](https://app.trymartin.com).
-2. Click the account icon at the bottom of the side bar.
+2. Click the account icon at the bottom of the left side bar.
 3. Click "Add a phone number".
 4. Enter your phone number.
 5. Verify your phone number by entering the code you receive via SMS.
